--- a/git.tex
+++ b/git.tex
@@ -1,6 +1,7 @@
 \documentclass{article} \usepackage[textwidth=18cm,textheight=18cm]{geometry}
 
 \title{Git} \date{\vspace{-5ex}} \author{Stefano Entatti}
+\usepackage{hyperref}
 
 \begin{document}
 
@@ -409,6 +410,33 @@ rebase, ammend
 \subsection{Gitignore}
 
 \section{fonti, link utuli}
+
+\subsection{domande}
+\href{https://stackoverflow.com/questions/9529497/what-is-origin-in-git}{che
+cos'è head}
+\href{https://stackoverflow.com/questions/292357/what-is-the-difference-between-git-pull-and-git-fetch}{differenza tra pull e fetch}
+\href{https://stackoverflow.com/questions/348170/how-do-i-undo-git-add-before-commit?rq=1}{annullare add}
+\href{https://stackoverflow.com/questions/572549/difference-between-git-add-a-and-git-add?rq=1}{parametri di add}
+\href{https://stackoverflow.com/questions/1125968/how-do-i-force-git-pull-to-overwrite-local-files?rq=1}{sovrascrivere con pull}
+\href{https://stackoverflow.com/questions/1783405/how-do-i-check-out-a-remote-git-branch?rq=1}{checkout di un branch remoto}
+\href{https://stackoverflow.com/questions/2003505/how-do-i-delete-a-git-branch-locally-and-remotely?rq=1}{eliminare un branch}
+\href{https://stackoverflow.com/questions/4114095/how-do-i-revert-a-git-repository-to-a-previous-commit?rq=1}{tornare a commit precedenti}
+\href{https://stackoverflow.com/questions/6591213/how-do-i-rename-a-local-git-branch?rq=1}{rinominare un branch }
+\href{https://stackoverflow.com/questions/2304087/what-is-head-in-git}{cos'è head}
+\href{https://www.git-tower.com/learn/git/faq/detached-head-when-checkout-commit}{deatached
+head}
+\href{https://stackoverflow.com/questions/8196544/what-are-the-git-concepts-of-head-master-origin}{differenza tra head, master e origin}
+\href{https://stackoverflow.com/questions/20954566/what-is-the-difference-from-head-head-and-head1}{tipi di head}
+\href{https://stackoverflow.com/questions/23241052/what-does-git-push-origin-head-mean}{push origin head}
+\href{https://stackoverflow.com/questions/10228760/fix-a-git-detached-head}{uscire da deatached head}
+
+\subsection{link}
+\href{https://www.atlassian.com/git/tutorials/what-is-version-control}{benefici
+dei version control}
+\href{https://git-scm.com/book/en/v2}{pro git}
+\href{https://git-scm.com/doc}{tutti i comandi}
+\href{https://git-scm.com/about/branching-and-merging}{vantaggi di git}
+\href{https://chris.beams.io/posts/git-commit/}{norme sulla scrittura dei commit}
 
 \end{document}
 
