--- a/git.tex
+++ b/git.tex
@@ -32,16 +32,16 @@ dei copia e incolla.
 Un sistema di controllo di versione tiene traccia di tutte le modifiche
 effettuate su un insieme di file (che compongono il progetto), ovvero di chi le
 ha fatte, quando, quali righe sono state tolte e quali aggiunte. Ogni registrazione
-di modifica riporta l'autore, un titolo e un descrizione che spiega in dettaglio
-il perche e stata necessaria o qualche peculiarità della modifica stessa
+di modifica riporta l'autore, un titolo e una descrizione che spiega in dettaglio
+il perchè e stata necessaria o qualche peculiarità della modifica stessa
 in modo da facilitare la comprensione ad altri sviluppatore o ad una rilettura
-in un futuro. Inoltre in questo modo e' possibile navigare e riportarsi in 
+in futuro. Inoltre in questo modo è possibile navigare e riportarsi in 
 qualsiasi punto della storia del progetto.
 
-Per permettere a più persone di lavorare nello stesso momento vengono ognuno
-copia in locale il progetto preso da un punto di riferimento (server comune ad esempio)
-e dopo aver apportato le modifiche necessarie e' possibile unirle tenendo traccia
-di chi ha modificato cose ed in quale ordine.
+Per permettere a più persone di lavorare nello stesso momento ognuno
+copia in locale il progetto da un punto di riferimento (server comune ad
+esempio), e dopo aver apportato le modifiche necessarie è possibile unirle 
+tenendo traccia di chi ha modificato cosa ed in quale ordine.
 
 Esistono molti software di controllo versione, tra i più famosi ci sono Git,
 CVS, Subversion, Mercurial, Bazaar e BitKeeper.
@@ -59,7 +59,7 @@ tutti i file che compongono un progetto, tra cui sorgenti, readme e file creati
 da git per tenere traccia dello storico delle modifiche può essere memorizzato
 su un server a cui possono accedere tutti i membri del progetto. Allo stesso
 tempo ognuno può tenere una copia completa del del repository in locale e
-utilizzare tutte le funzionalità di git anche offline. L'interazione col server
+utilizzare tutte le funzionalità di git anche \textbf{offline}. L'interazione col server
 è limiata a quando lo sviluppatore desidera scaricare le modifiche effettuate da
 altri o vuole caricare le proprie sul server.
 
@@ -145,8 +145,8 @@ $ git commit
 
 Questo comando aprirà l'editor di default di git. Nella prima riga va scritto il
 titolo del commit. è una buona norma che il titolo mantenga una lunghezza
-massima di 72 caratteri e contenga solo nomi e verbi al presente. Dalla
-terza riga, si lascia una linea vuote, inizia la descrizione, che può essere
+massima di 72 caratteri e contenga solo nomi e verbi al presente. La seconda si
+lascia sempre vuota e dalla terza inizia la descrizione, che può essere
 molto lunga e dettagliata per spiegare in modo discorsivo cosa si è fatto, 
 perché e se eventualmente ha causato dei problemi.
 
@@ -164,7 +164,7 @@ $ git commit -m "add options page"
 \end{verbatim}
 
 Ci sono varie teorie  sulla lunghezza e il contenuto dei messaggi e delle
-descrizioni dei commit e su ogni \emph{quanto} si debba committare. In genere un
+descrizioni dei commit e su \emph{ogni quanto} si debba committare. In genere un
 commit deve essere relativo ad un solo argomento e non comprendere modifiche
 totalmente indipendenti tra di loro. I messaggi di commit non devono essere
 generici (come ``fix crash'') altrimenti col passare del tempo sarà impossibile
@@ -217,9 +217,9 @@ staging area.
 Permette di caricare un numero illimitato di commit su un branch di un
 repository remoto. Le modifiche locali vengono unite a quelle remote.
 
-Git non permette di effettuare un push se la storia, inteso come sequenza di commit,
-del branch remoto non e' uguale al branch locale, ovviamente tranne i commit in aggiunta
-appena fatti in locale. Se ci si trova in questa situazione occorre effettuare un riallineamento,
+Git non permette di effettuare un push se la \textbf{storia}, intesa come sequenza di commit,
+del branch remoto non è uguale al branch locale, escludendo i commit
+appena aggiunti fatti in locale. Se ci si trova in questa situazione occorre effettuare un riallineamento,
 (pull/rebase).
 
 \begin{verbatim}
@@ -333,7 +333,19 @@ $ git push -d origin develop
 \end{verbatim}
 
 L'opzione -b di checkout crea un branch se quello passato come parametro non
-esiste.
+esiste, utilizzando quindi prima un git branch e poi un git checkout.
+
+Per fondere due branch si utilizza ovviamente merge. In questo caso si vuole
+portare le modifiche di develop su master:
+
+\begin{verbatim}
+$ git checkout master
+$ git merge develop
+Updating f42c576..3a0874c
+Fast-forward
+ git.tex | 2 ++
+ 1 file changed, 2 insertions(+)
+\end{verbatim}
 
 \subsection{Log, status, Diff}
 
@@ -350,12 +362,14 @@ utilizzare il parametro -a di ls per poterla vedere.
 $ ls .git/
 branches/  COMMIT_EDITMSG  config  description  FETCH_HEAD  HEAD  hooks/  index  
 info/  logs/  objects/  ORIG_HEAD  packed-refs  refs/
-
-$ ls .git/refs
-heads/  remotes/  tags/
 \end{verbatim}
 
 è molto importante la cartella refs. Contiene:
+
+\begin{verbatim}
+$ ls .git/refs
+heads/  remotes/  tags/
+\end{verbatim}
 
 \subsection{heads}
 
@@ -367,8 +381,8 @@ $ ls .git/refs/heads
 master/ develop/
 \end{verbatim}
 
-HEAD è un file che punta all'ultimo commit del branch in cui si sta lavorando
-nel repository locale.
+HEAD è un file che punta all'ultimo commit del branch in cui si è attualmente
+posizionati nel repository locale.
 
 \begin{verbatim}
 $ cat .git/HEAD
