--- a/git.tex
+++ b/git.tex
@@ -470,7 +470,13 @@ diversi commit), ovvero lo stato corrente del branch.
 Vengono assegnati ad un gruppo di commit in cui si è raggiunto un traguardo nel
 progetto (ad esempio 1.3.5).
 
-per visualizzare i tag...
+Per visualizzare i tag:
+
+\begin{verbatim}
+$ git tag
+v1.0
+v2.0
+\end{verbatim}
 
 per aggiungere un tag...
 
@@ -506,12 +512,22 @@ rebase, ammend
 
 \section{fonti, link utuli}
 
+\subsection{pagine ufficiali di git}
 \begin{itemize}
-    \item \href{https://www.atlassian.com/git/tutorials/what-is-version-control}{benefici dei version controllo}
     \item \href{https://git-scm.com/book/en/v2}{pro git}
     \item \href{https://git-scm.com/doc}{tutti i comandi}
     \item \href{https://git-scm.com/about/branching-and-merging}{vantaggi di git}
+\end{itemize}
+
+\subsection{correlato}
+\begin{itemize}
+    \item \href{https://www.atlassian.com/git/tutorials/what-is-version-control}{benefici dei version controllo}
     \item \href{https://chris.beams.io/posts/git-commit/}{norme sulla scrittura dei commit}
+    \item \href{https://semver.org/}{norme sull'assegnazione dei nomi alle versioni}
+\end{itemize}
+
+\subsection{stack overflow}
+\begin{itemize}
     \item \href{https://stackoverflow.com/questions/9529497/what-is-origin-in-git}{che cos'è head}
     \item \href{https://stackoverflow.com/questions/292357/what-is-the-difference-between-git-pull-and-git-fetch}{differenza tra pull e fetch}
     \item \href{https://stackoverflow.com/questions/348170/how-do-i-undo-git-add-before-commit?rq=1}{annullare add}
@@ -521,13 +537,12 @@ rebase, ammend
     \item \href{https://stackoverflow.com/questions/2003505/how-do-i-delete-a-git-branch-locally-and-remotely?rq=1}{eliminare un branch}
     \item \href{https://stackoverflow.com/questions/4114095/how-do-i-revert-a-git-repository-to-a-previous-commit?rq=1}{tornare a commit precedenti}
     \item \href{https://stackoverflow.com/questions/6591213/how-do-i-rename-a-local-git-branch?rq=1}{rinominare un branch }
-\href{https://stackoverflow.com/questions/2304087/what-is-head-in-git}{cos'è head}
-\href{https://www.git-tower.com/learn/git/faq/detached-head-when-checkout-commit}{deatached head}
-\item \href{https://stackoverflow.com/questions/8196544/what-are-the-git-concepts-of-head-master-origin}{differenza tra head, master e origin}
-\item \href{https://stackoverflow.com/questions/20954566/what-is-the-difference-from-head-head-and-head1}{tipi di head}
-\item \href{https://stackoverflow.com/questions/23241052/what-does-git-push-origin-head-mean}{push origin head}
-\item \href{https://stackoverflow.com/questions/10228760/fix-a-git-detached-head}{uscire da deatached head}
-
+    \item \href{https://stackoverflow.com/questions/2304087/what-is-head-in-git}{cos'è head}
+    \item \href{https://www.git-tower.com/learn/git/faq/detached-head-when-checkout-commit}{deatached head}
+    \item \href{https://stackoverflow.com/questions/8196544/what-are-the-git-concepts-of-head-master-origin}{differenza tra head, master e origin}
+    \item \href{https://stackoverflow.com/questions/20954566/what-is-the-difference-from-head-head-and-head1}{tipi di head}
+    \item \href{https://stackoverflow.com/questions/23241052/what-does-git-push-origin-head-mean}{push origin head}
+    \item \href{https://stackoverflow.com/questions/10228760/fix-a-git-detached-head}{uscire da deatached head}
 \end{itemize}
 
 \end{document}
