--- a/git.tex
+++ b/git.tex
@@ -111,7 +111,8 @@ Git offre moltissimi comandi, ognuno dei quali svolge un piccolo insieme di
 funzionalità. Ogni comando (in questa sezione tratteremo i principali) è sempre preceduto da
 ``git''. Ognuno può accettare un diverso numero di argomenti e di opzioni
 (tratteremo le principali per ogni comando), spesso precedute da un singolo o da
-un doppio meno. 
+un doppio meno. Gli argomenti e le opzioni dei comandi possono essere combinati
+in moltissimi modi per ottenere il comportamento desiderato da git.
 
 \subsection{init, clone}
 
